<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car costs</string>
    <string name="action_settings">Settings ...</string>
    <string name="added_fuel">Added refueling</string>
    <string name="deleted_fuel">Deleted refueling</string>
    <string name="updated_fuel">Updated refueling</string>
    <string name="date">Date</string>
    <string name="mileage">Mileage</string>
    <string name="liters">Liters</string>
    <string name="cost">Cost</string>
    <string name="liter_cost">Liter cost</string>
    <string name="average_fuel">Average fuel</string>
    <string name="distance">Distance</string>
    <string name="fuel_type">Fuel type</string>
    <string name="add">Add</string>
    <string name="title_activity_edit_fuel">Edit refueling</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="added_cost">Added cost</string>
    <string name="title_activity_edit_cost">Edit cost</string>
    <string name="hello_world">Hello world!</string>
    <string name="added_oil">Added oil</string>
    <string name="title_activity_edit_oil">Edit oil</string>
    <string name="path">Path:</string>
    <string name="file_name">File name:</string>
    <string name="action_import_costs">Import costs</string>
    <string name="action_import_oil">Import oil</string>
    <string name="action_import_refueling">Import refueling</string>
    <string name="costs">Costs</string>
    <string name="fuel">Fuel</string>
    <string name="other">Other</string>
    <string name="action_import">Import ...</string>
    <string name="action_backup">Backup to GDrive</string>
    <string name="action_restore">Restore from GDrive</string>
    <string name="action_export_csv">Export to csv</string>
    <string name="action_export">Export ...</string>
    <string name="action_export_costs">Export costs</string>
    <string name="action_export_oil">Export oil</string>
    <string name="action_export_refueling">Export refueling</string>
    <string name="cannot_create_file">Cannot create new file</string>
    <string name="file_saved">File saved</string>
    <string name="average_fuel_car">Average fuel by car</string>
    <string name="average_fuel_calculated">Average fuel calculated</string>
    <string name="overview">Overview</string>
    <string name="total">Total</string>
    <string name="backup_created">Backup created</string>

</resources>
