<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OverviewActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
        <menu>
            <item android:title="@string/action_import">
                <menu>
                    <item
                        android:id="@+id/action_import_costs"
                        android:title="@string/action_import_costs" />
                    <item
                        android:id="@+id/action_import_oil"
                        android:title="@string/action_import_oil" />
                    <item
                        android:id="@+id/action_import_refueling"
                        android:title="@string/action_import_refueling" />
                </menu>
            </item>
            <item android:title="@string/action_export">
                <menu>
                    <item android:title="@string/action_export_costs" android:id="@+id/action_export_costs"/>
                    <item android:title="@string/action_export_oil" android:id="@+id/action_export_oil"/>
                    <item android:title="@string/action_export_refueling" android:id="@+id/action_export_refueling"/>
                </menu>
            </item>

            <item android:title="@string/action_backup" android:id="@+id/action_backup"/>
            <item android:title="@string/action_restore" android:id="@+id/action_restore"/>
        </menu>
    </item>
</menu>
