<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity$PlaceholderFragment"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Total"
        android:id="@+id/title"
        android:layout_alignRight="@+id/fuel_cost"
        android:layout_alignParentLeft="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/costs"
        android:id="@+id/textView26"
        android:gravity="center_horizontal"
        android:layout_below="@+id/title"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="70 123,54 zł"
        android:id="@+id/total_cost"
        android:layout_below="@+id/textView26"
        android:layout_alignRight="@+id/textView26"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fuel"
        android:id="@+id/textView29"
        android:layout_below="@+id/total_cost"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1 234,34 zł"
        android:id="@+id/fuel_cost"
        android:layout_alignTop="@+id/textView29"
        android:layout_alignRight="@+id/total_cost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/other"
        android:id="@+id/textView31"
        android:layout_below="@+id/textView29"
        android:layout_alignLeft="@+id/textView29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="69 123,44 zł"
        android:id="@+id/other_cost"
        android:layout_alignBottom="@+id/textView31"
        android:layout_alignRight="@+id/total_cost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/overview"
        android:id="@+id/textView30"
        android:layout_below="@+id/textView31"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/other_cost"
        android:gravity="center_horizontal"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/average_fuel_car"
        android:id="@+id/textView32"
        android:layout_below="@+id/textView30"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="5,4 l"
        android:id="@+id/average_fuel_car"
        android:layout_alignTop="@+id/textView32"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/average_fuel_calculated"
        android:id="@+id/textView33"
        android:layout_below="@+id/textView32"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="5,9 l"
        android:id="@+id/average_fuel_calculated"
        android:layout_alignBottom="@+id/textView33"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/added_oil"
        android:id="@+id/textView34"
        android:layout_below="@+id/textView33"
        android:layout_alignParentLeft="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2,3 l"
        android:id="@+id/oil"
        android:layout_below="@+id/average_fuel_calculated"
        android:layout_alignRight="@+id/fuel_cost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/distance"
        android:id="@+id/textView35"
        android:layout_below="@+id/textView34"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="19 123 km"
        android:id="@+id/distance"
        android:layout_alignBottom="@+id/textView35"
        android:layout_alignParentRight="true" />

</RelativeLayout>
