<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.sh4dov.carcosts.controllers.AddCostFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date"
                android:id="@+id/textView17"
                android:gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:calendarViewShown="false"
                android:layout_below="@+id/textView17"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true">

            </DatePicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cost"
                android:id="@+id/textView19"
                android:gravity="center_horizontal"
                android:layout_below="@+id/date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/textView19" >

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cost1"
                    android:layout_weight="0.87" >

                </NumberPicker>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="89dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="."
                    android:id="@+id/textView21"
                    android:textSize="50dp"
                    android:layout_marginTop="40dp" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cost2"
                    android:layout_weight="0.15" >

                </NumberPicker>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/comment"
                android:id="@+id/textView23"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linearLayout"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/comment"
                android:text="sample comment" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/add_button" />
        </TableLayout>
    </ScrollView>

</RelativeLayout>
